force-app/main/default/objects/Target_Plan__c/Target_Plan__c.object-meta.xml
<CustomObject>
    <label>NotUsed_Target Plan</label>
    <nameField>
        <displayFormat>TP-{000}</displayFormat>
        <label>Target Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NotUsed_Target Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>