force-app/main/default/objects/Target_Plan__c/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <label>Incentive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Variable Pay</fullName>
            </value>
            <value>
                <fullName>Basic Pay</fullName>
            </value>
            <value>
                <fullName>Actual Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>