force-app/main/default/objects/Target_Plan__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipName>Target_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>