force-app/main/default/objects/Target_Plan__c/fields/Slab_Applied_At__c.field-meta.xml
<CustomField>
    <fullName>Slab_Applied_At__c</fullName>
    <label>Slab Applied At</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>